<resources>
    <string name="app_name">Mistery Shopper</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password_lenght">Password must be > 5 characters</string>
    <string name="invalid_password">Password required</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_failed">regitration failed</string>
    <string name="email_not_inserted">e-mail not inserted \nplese insert a valid mail</string>
    <string name="no_item_to_show">"List is empty "</string>
    <string name="id_shop_label">ID SHOP</string>
    <string name="search_for_hire">search for hire</string>
    <string name="search">SEARCH</string>
    <string name="manager_label">MANAGER</string>
    <string name="city">CITY</string>
    <string name="address">ADDRESS</string>
    <string name="add">ADD</string>
    <string name="shop_added">"shop added "</string>
    <string name="login_success">login success</string>
    <string name="shop_not_added">shop didn\'t add , plz try again</string>
    <string name="field_required">required field</string>
    <string name="cancel">Cancel</string>
    <string name="reg_as_employer">Register as employer</string>
    <string name="register_as_shopper">Register as shopper</string>
    <string name="show_shoppers">shoppers available</string>
    <string name="user_updated">user updated</string>
    <string name="hire">HIRE</string>
    <string name="add_fee">fee</string>
    <string name="hering_request">there is an hering request for you</string>
    <string name="shoppers">Shopper</string>
    <string name="place">Where :</string>
    <string name="when">When :</string>
    <string name="payment">Fee :</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="notification_from">from :</string>
    <string name="notification_of_employment">Notification of employment</string>
    <string name="details">Expand to see detailes!</string>
    <string name="show">show</string>
    <string name="response_notification">shopper response</string>
    <string name="notification_response">request.</string>
    <string name="notification_has">has</string>
</resources>
