<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_dialog_hire"
        layout="@layout/toolbar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/id_shop_add"
        android:hint="@string/id_shop_label"
        android:inputType="text"
        android:background="@drawable/back_etext_shape"
        android:layout_margin="30dp"
        android:textAlignment="center"
        android:textColor="@color/labelAndText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/shop_manager_name_add"
        android:hint="@string/manager_label"
        android:inputType="text"
        android:background="@drawable/back_etext_shape"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:textColor="@color/labelAndText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/shop_city_add"
        android:hint="@string/city"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:background="@drawable/back_etext_shape"
        android:textColor="@color/labelAndText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/shop_address_add"
        android:hint="@string/address"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:background="@drawable/back_etext_shape"
        android:textColor="@color/labelAndText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:id="@+id/button_shop_add"
        android:textColor="@color/labelAndText"
        android:background="@drawable/button_shape"
        android:text="@string/add"/>



</LinearLayout>